Fixed/added tests for items running in containers (NGZs).

--- a/test/test.env
+++ b/test/test.env
@@ -1,2 +1,9 @@
-LIB_DIR=$(dirname $0)/../lib
+TEST_DIR=$(dirname $0)
+LIB_DIR=$TEST_DIR/../lib
 . $LIB_DIR/testing.sh
+
+# Global Logging Configuration
+. $LIB_DIR/logging.sh
+LOG_LEVEL=LOG_DEBUG
+LOG_DIR=$TEST_DIR/log
+LOG_DATE_FMT="+%Y%m%d%H%M%S"
