Move sys-dash.env to config dir

--- a/config/sys-dash.env
+++ b/config/sys-dash.env
@@ -11,7 +11,7 @@ SD_SCRIPTS=$SD_HOME/Scripts
 # Logging - Configure and import
 ###############################
 . $SD_LIB/logging.sh
-LOG_LEVEL=$LOG_DEBUG
+LOG_LEVEL=$LOG_TRACE
 LOG_DIR=$SD_HOME/log
 LOG_DATE_FMT="+%Y%m%d%H%M%S"
 
@@ -21,7 +21,7 @@ log_archive
 ###############################
 # Items - Configure and import
 ###############################
-ITEM_TEMPLATE=$SD_CONFIG/item_template
+ITEM_TEMPLATE=$SD_LIB/sd-item_template.sh
 ITEM_DIR=$SD_CONFIG/item
 . $SD_LIB/sd-items.sh
 
