Updated .gitignore for keeping empty dirs
Keeping log and data directories in repo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-log/*
-data/*
-test/log*
-test/results
-web/data/*
-web/test
+log/
+data/
+test/log/
+test/results/
+web/data/
+web/test/
 web/CollapsibleTables.js
