Fixing root SD directory for GitHub Actions env

--- a/config/sys-dash.env
+++ b/config/sys-dash.env
@@ -1,7 +1,7 @@
 # Set up environment for sys-dash Scripts
 
 # Root for all Sys-Dash
-SD_HOME=~/Workspaces/sys-dash
+SD_HOME=./
 
 SD_LIB=$SD_HOME/lib
 SD_CONFIG=$SD_HOME/config
