--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,4 +14,5 @@ jobs:
     - name: Run a multi-line script
       run: |
         echo Run updateAll
-        /home/runner/work/sys-dash/sys-dash/Scripts/results.sh updateAll && ls -R
+        /home/runner/work/sys-dash/sys-dash/Scripts/results.sh updateAll
+        cat ./log/results.log
